# EnergyPriceLanguageComparison

./: .gitmodules  LICENSE  README.md
CSharp/: EnergyPriceCalculations.sln
CSharp/EnergyPriceCalculations/: EnergyPriceCalculations.csproj  Program.cs
Cpp/: .clang-format  .gitignore  CMakeLists.txt
Cpp/EnergyPriceCalculations/: CMakeLists.txt  EnergyPriceCalculations.cpp  EnergyPriceCalculations.h  enum.hpp
Python/: pyproject.toml
Python/energy_prices/: app.py
